apps/infra/longhorn/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/instance: longhorn
    kube-vip.io/loadbalancerIPs: 192.168.40.181
  name: longhorn-frontend-ui
  namespace: longhorn-system
spec:
  type: LoadBalancer
  ports:
  - name: ui
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: longhorn-ui
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-longhorn
  namespace: longhorn-system
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 30903
    port: 9093
    targetPort: web
    protocol: TCP
  selector:
    alertmanager: longhorn
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-longhorn
  namespace: longhorn-system
spec:
  type: NodePort
  ports:
  - name: web
    nodePort: 32452 # 30904
    port: 9090
    targetPort: web
    protocol: TCP
  selector:
    prometheus: longhorn
