apps/infra/longhorn/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:VaQC0YZE1poMSijX7ukF4+IwSig44twGJVnhp07yNPDQueo=,iv:pG5XokxAVEvpdU4vCCNBrFQe7IBrh4GO+6eKdowCTxg=,tag:zRqPZBnDKI+fBHAdJK52yQ==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:WE27GbDZZ2VVPMrK+1//t2W7X5Xanu7elDMv3qtXYZOMmbQ=,iv:m/4WQ7JfNhX2vm2f3RtMUSHcZ0uuC7HP5sYVId1MuAQ=,tag:QAeLZJPD2NehXeAQSt4VPQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:8rZMy0MKbZ8eAAEOhP8zhcOE0uQkr/tEd0Q=,iv:pXUBAR6H138/7RnBbTFa9Go5tn02iNULp6QHRqR1qH8=,tag:x10pvyAbIEvY5AwfYBNIVA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: longhorn-frontend-production
    namespace: longhorn-system
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:m0a4pGSP4DovSq6OfNdKaEp9YpkaAfenjf+VEt54xjJTXWJvAZ4QbDVVEnlUtMFmx6lN1haDLbnIhcdyTPE4G3hGq9/18f+rAN9RkfYkff333B3zZsy0Ah03dusiPCHPGEN/6kpL2ZNCA/kr66JrB+22Pl94Vi/HVjzSS37o1ifC6bv+NvfbXQJy0iNEeEg=,iv:v7DJicvk8/T9HY8EnqvBFryU2a2OYOr5vTgA+ioW2p0=,tag:SGKM0TH70GMgXSpQPXKuIg==,type:str]
          priority: 10
          middlewares:
            - name: chain-authentik
              namespace: traefik
            - name: svc-longhorn-headers
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              namespace: longhorn-system
        - kind: Rule
          match: ENC[AES256_GCM,data:oZqzwEe0VMa8QiQgYUibQoFQywcJ8XYP0bnOD72beXNUAzT8uqpZ/8uHKpLz13vDWbNg5JZ+JmZgVPLkD8elMYWDKq8S/3Rd1WLMun5UuYIDOwIM+A==,iv:dKfQeMdbdiarXwd21tiQ+7apX07f0zrcG4Bv8erMuIE=,tag:/FzYubXJ1XhXAN1P4acErQ==,type:str]
          priority: 15
          services:
            - kind: Service
              name: longhorn-frontend
    tls:
        domains:
            - main: ENC[AES256_GCM,data:fIfG0Fa4gp6PttEZYYU7cFFLbLtXwowfN+k=,iv:+jYCEPJinwdHjtaH9PnzAybC+yy1u6W0nzFcgSvbKBQ=,tag:IZx4HkfNyQBiLjEGM+b2/A==,type:str]
              sans:
                - ENC[AES256_GCM,data:TcyLVZRz3QHddms6tFRVdNlmFJer2qW+/79X,iv:4bGqYGmdEcF/d2AWuALZiLQYwPrgxN+Tr0pwxdvugQc=,tag:vXjOD+jGNeTnbDK3NY43Jw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwRkFZVUhUQmJjRUd4OXRK
[...]
            Fc5eNbn3Ztd29OMytL9mUDFLgD665hxM/13hNoceTswD6gstoruOlw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-09T17:23:17Z"
    mac: ENC[AES256_GCM,data:38l928PZkvEnAV9zBRAV/APOhVTLQjzaWc645xxL2Xt1RoA/ijHMfcOfbNkdpxD5X4KAoo43D9Rq0aI7dq4udOSNN1DcubRxaITGyRm9DCaeboRpdC7lm+gri1humRqKden8iRMAQnonz3b5AtT2oZBROp6knMITSk28AmCU7Ys=,iv:zULQF46ylVcNaBYsIvKp7zIwk+Q2VdaVGe70Uiwu1Rk=,tag:wKPFaO0t0yOECOhVqnjlng==,type:str]
    pgp:
        - created_at: "2024-10-03T23:41:37Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAiVI1PV+c9s1FpCagCW8YYtE3YOA4BQxRKJnwq4XBmDfa
[...]
            =uHP2
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
