apps/infra/longhorn/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: longhorn.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: longhorn.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/target: storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: longhorn-frontend-staging
    namespace: longhorn-system
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: Host(`longhorn.storage.anotherlife.org.pl`) || HostRegexp(`{subdomain:[a-z0-9]+}.anotherlife.org.pl`) && PathPrefix(`/outpost.goauthentik.io/`)
          priority: 10
          middlewares:
            - name: chain-authentik
              namespace: traefik
            - name: svc-longhorn-headers
              namespace: traefik
          services:
            - kind: TraefikService
              name: longhorn-frontend
              namespace: longhorn-system
        - kind: Rule
          match: Host(`longhorn.storage.anotherlife.org.pl`) && PathPrefix(`/outpost.goauthentik.io/`)
          priority: 15
          services:
            - kind: Service
              name: longhorn-frontend
    tls:
        domains:
            - main: storage.anotherlife.org.pl
              sans:
                - .storage.anotherlife.org.pl
        options:
            name: tls-ver13
            namespace: traefik
        secretName: longhorn-cf-staging
